--- a/.github/workflows/my-demo.yml
+++ b/.github/workflows/my-demo.yml
@@ -42,6 +42,8 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    needs: build
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -50,4 +52,19 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run tests
         run: echo I am testing...
+
+  deploy:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    needs: test
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v4
+
+      # Runs a single command using the runners shell
+      - name: Run tests
+        run: echo I am deploying...
 
